# bob_central

./: .dockerignore  .env.template  .flake8  .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  requirements.txt  requirements_tti.txt  setup.cfg
.gitea/workflows/: local_ros2_ci.yml
.github/workflows/: docker.yml  ros2_ci.yml
bob_central/: __init__.py  agency_daemon_node.py  alarm_bridge_node.py  art_observer_node.py  browser_daemon_node.py  go_bridge_node.py  jlog_node.py  memory_daemon_node.py  music_daemon.py  music_daemon_node.py  orchestrator_node.py  orchestrator_node_fixed.py  reasoning_observer_node.py  repl_node.py  setup.cfg  status_daemon_node.py  swarm_coordinator_node.py  swarm_scout_node.py  tti_node.py
config/: diagnostics.yaml  knowledge_repos.yaml  layout_main.json  nginx-dns-proxy.conf  nginx-edge-combined.template  nginx-edge-dns-proxy.conf  nginx.conf.template  sdlviz_layout.json  security_severity.json  tbot_whitelist.yaml
dashboards/: layout_expanded.json  layout_main.json  layout_minimal.json  layout_standard.json  platinum_v1.json
diagrams/: architecture.md
docker/: Dockerfile.base  Dockerfile.browser  Dockerfile.playwright  Dockerfile.tbot  Dockerfile.tti  Dockerfile.vox  bashrc_edge  compose-base.yaml  compose-browser.yaml  compose-dashboard.yaml  compose-dns.yaml  compose-edge.yaml  compose-gitea.yaml  compose-inference.yaml  compose-nviz.yaml  compose-q3tts.yaml  compose-qdrant.yaml  compose-sdlviz.yaml  compose-tbot.yaml  compose-tti.yaml  compose-vox.yaml  compose.face.yaml  compose.playwright.yaml  edge_readme.md  manage.sh  nginx.conf.template  nviz_entrypoint.sh  tbot_launch.yaml
experimental/swarm/: __init__.py  dht_discovery.py  peer_cache.py  swarm_probe.py
launch/: eva_base_launch.yaml  face_launch.yaml  orch_eva.yaml  orch_eva_tti.yaml  orch_status.yaml  swarm_coordinator.launch.yaml  tbot_launch.yaml
prompts/: bobassi.md  engineer.md  engineer.txt  orchestrator.md  orchestrator.txt  researcher.md  researcher.txt  summarizer.md  summarizer.txt  vision_prompt.md  vision_prompt.txt
scripts/: flush_fifos.sh  vox_buffer_handler.py
scripts/experimental/swarm/: DESIGN.md  git_commit_swarm.py  kad_dht_client.py  libp2p_handshake.py  noise_payload.py  noise_xx_handshake.py  p2p_peer_crawler.py  stealth_mesh_routing.py  swarm_coordinator_v2.py
skills/: TEMPLATE_SPEC.md
skills/browser_agent/: SKILL.md
skills/browser_agent/scripts/: browser_tool.py
skills/core_coder/: SKILL.md  vlm_robot_controller.py  vlm_test.py
skills/core_coder/scripts/: coder_tool.py  generate_boilerplate.py  swarm_coordinator.py  validate_python.py
skills/knowledge_graph/: INSTRUCTIONS.md  SKILL.md
skills/knowledge_graph/docs/: bob_audio.md  bob_av_tools.md  bob_central.md  bob_coquitts.md  bob_flux2k.md  bob_launch.md  bob_llm.md  bob_moondream.md  bob_nlp_tools.md  bob_nviz.md  bob_q3tts.md  bob_topic_tools.md  voskros.md
skills/knowledge_graph/scripts/: read_manual.py  sync.py
skills/knowledge_researcher/: SKILL.md
skills/knowledge_researcher/scripts/: search_web.py
skills/media_artist/: SKILL.md
skills/media_artist/scripts/: artist_tool.py  list_media.py  play_music.py  stop_music.py
skills/media_artist/scripts/playlists/: my_playlist.txt
skills/net_explorer/: SKILL.md
skills/net_explorer/scripts/: botnet_scout.py
skills/nviz_dashboard/: SKILL.md  start_observer.py  start_observer_bg.py
skills/nviz_dashboard/examples/: example_usage.py  twitch_stream_dashboard.json
skills/nviz_dashboard/scripts/: clear_dashboard.py  dashboard_manager.py  delete_dashboard.py  display_bitmap.py  display_image.py  display_status_terminal.py  list_dashboards.py  load_dashboard.py  load_from_file.py  qdrant_client.py  quick_load.py  quick_save.py  render_dashboard_telemetry.py  repair_dashboard.py  save_dashboard.py  save_dashboard_fixed.py  save_stream_dashboard.py  save_to_file.py  update_system_status.py
skills/qdrant_memory/: README.md  SKILL.md
skills/qdrant_memory/examples/: basic_usage.py  conversation_memory.py  embedding_demo.py
skills/qdrant_memory/scripts/: __init__.py  cli.py
skills/recursive_thought/: SKILL.md
skills/recursive_thought/scripts/: thought_tool.py
skills/repl_kernel/: SKILL.md  check_cron.py  cron_check.py  crontab_test.py  get_pip_freeze.py  list_nviz_scripts.py  ps.py  run_find.py  run_list_script.py  sleep_60.py
skills/repl_kernel/scripts/: repl_tool.py
skills/security_monitor/: SKILL.md
skills/security_monitor/examples/: complete_demo.py
skills/security_monitor/scripts/: alarm_bobsynth_fixed.py  alarm_synthesis.py  alarm_synthesis_v2.py  alarm_synthesis_v2_fixed.py  botnet_detection_simple.py  demo_alarm_system.py  ids_alert_simulator.py  ml_anomaly_detector.py  security_integration.py  start_alarm_system.sh  test_bobsynth_alarm.py
skills/self_evolution/: SKILL.md  TAXONOMY.md
skills/self_evolution/scripts/: apply_skill.py  art_observer_enforcer_v2.py  llm_integration.py  self_evolution.py  self_evolution_fixed.py  simple_evolver.py  simple_evolver_fixed.py  test_evolution.py  test_evolution.py.backup  test_evolution_v2.py  test_evolution_v2.py.backup
skills/self_monitoring/: SKILL.md  enhanced_status.py  extended_system_status.py  gpu_processes.py  internal_gpu_metrics.py
skills/self_monitoring/scripts/: __init__.py  apply_skill.py  internal_health_daemon.py  self_monitor.py  wrapper.sh
skills/social_memory/: SKILL.md
skills/social_memory/scripts/: search_history.py
skills/swarm_connector/: SKILL.md
skills/swarm_connector/scripts/: swarm_connector.py
skills/system_management/: SKILL.md
skills/system_management/scripts/: find_fifos.py  find_scripts.py  get_pip_freeze.py  ps.py  scan_workspace.py  system_explorer.py  system_helper.py
skills/vision_llm/: SKILL.md
skills/vision_llm/scripts/: __init__.py  send_vision_request.py  vision_query.py
test/: test_skills_guidelines.py
tests/: test_repo_structure.py  test_skills_guidelines.py
tools/: artist_tool.py  coder_tool.py  system_helper.py  web_research.py
(+2 files in other folders)
