[develop]
script_dir=$base/lib/bob_central
[install]
install_scripts=$base/lib/bob_central
[options.entry_points]
console_scripts =
    orchestrator = bob_central.orchestrator_node:main
    tti = bob_central.tti_node:main
    repl = bob_central.repl_node:main
    status_daemon = bob_central.status_daemon_node:main
