[develop]
script_dir=$base/lib/bob_central
[install]
install_scripts=$base/lib/bob_central
[options.entry_points]
console_scripts =
    orchestrator = bob_central.orchestrator_node:main
    tti = bob_central.tti_node:main
    repl = bob_central.repl_node:main
    status_daemon = bob_central.status_daemon_node:main
    reasoning_viz = bob_central.reasoning_observer_node:main
    art_observer = bob_central.art_observer_node:main
    jlog = bob_central.jlog_node:main
    music_daemon = bob_central.music_daemon:main
    memory_daemon = bob_central.memory_daemon_node:main
    agency_daemon = bob_central.agency_daemon_node:main
